--- a/templates/schedules.html
+++ b/templates/schedules.html
@@ -19,6 +19,117 @@
 
     <!-- Custom styles for this template-->
     <link href="/static/css/sb-admin-2.min.css" rel="stylesheet">
+    <style>
+        .calendar-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        table td {
+            vertical-align: top;
+            position: relative; /* Relative positioning for the table cell */
+            /* height: 70px; Optional: Set a fixed height for uniformity */
+        }
+
+        .badge-event {
+            margin-left:3px;
+            /* position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%); To center align the badge horizontally */
+        }
+
+        #weeklyCalendar th {
+            background-color: #f5f5f5;
+            border-right: 2px solid #e0e0e0;
+        }
+
+        #weeklyCalendar td {
+            height: 30px;
+            border-right: 2px solid #e0e0e0;
+        }
+
+        #weeklyCalendar td:last-child {
+            border-right: none;
+        }
+
+        .badge-event {
+            display: inline-block;
+            width: 100%;
+            text-align: center;
+            padding: 5px 0;
+            border-radius: 3px;
+        }
+
+        .badge-success { 
+            background-color: #28a745; 
+        }
+
+        .badge-warning { 
+            background-color: #ffc107; 
+        }
+
+        #weeklyCalendar .event-badge {
+            position: absolute;
+            width: 100%;
+            background-color: rgba(0, 123, 255, 0.5); /* Adjust as needed */
+            color: white;
+            z-index: 1;
+            border-radius: 3px;
+            text-align: center;
+            overflow: hidden; /* Handle long event names */
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+
+        #weeklyCalendar td {
+            position: relative;
+        }
+
+
+        /* Custom CSS to override Bootstrap */
+        @media (max-width: 767px) {
+        .table-responsive {
+            display: block;
+            overflow-x: auto;
+        }
+        }
+
+        @media (min-width: 768px) {
+        .table-responsive {
+            display: table; /* Reset to default table display value */
+        }
+        }
+        .hoverable-box {
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+        border: 0px;
+        }
+
+        .hoverable-box:hover {
+        background-color: #f1f1f1;
+        }
+
+        #events-list {
+        padding-left: 0;
+        }
+
+        #events-list .list-group-item {
+        margin-left: 0;
+        /* padding-left: 0; */
+        }
+        
+        #bookings-list {
+        padding-left: 0;
+        }
+
+        #bookings-list .list-group-item {
+        margin-left: 0;
+        /* padding-left: 0; */
+        }
+
+    </style>
 
 </head>
     <body class="page-top">
@@ -34,7 +145,7 @@
                     {% include 'navbar.html' %}
                     
                     <div class="container-fluid">
-                        <h1>Welcome!, {{ request.user.user_name }}</h1>
+                        <h1>Schedules</h1>
                         <div class="row">
                             <!-- Area Chart -->
                             <div class="col-xl-8 col-lg-7">
@@ -129,6 +240,9 @@
 
         <!-- Custom scripts for all pages-->
         <script src="/static/js/sb-admin-2.min.js"></script>
+
+        
+        <script src="/static/js/active-link.js"></script>
         
         <!-- Variables containing events for calendar -->
         <script>
@@ -327,5 +441,6 @@
         <script src="/static/js/calendar.js"></script>
         <script src="/static/js/upcoming-event.js"></script>
         <script src="/static/js/user-booking.js"></script>
+
     </body>
 </html>
