--- a/templates/rooms-admin.html
+++ b/templates/rooms-admin.html
@@ -2,23 +2,11 @@
 <html lang="en">
 
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    {% include 'header-1.html' %}
 
     <title>Schedules</title>
 
-    <!-- Custom fonts for this template-->
-    <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link href="/static/css/sb-admin-2.min.css" rel="stylesheet">
+    {% include 'header.html' %}
     <!-- Custom styles for this page -->
     <link href="/static/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 </head>
@@ -35,10 +23,10 @@
                 {% include 'navbar.html' %}
                 
                 <div class="container-fluid">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addRoomModal">
+                        Add Room
+                    </button>
                     <div class="row">
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addRoomModal">
-                            Add Room
-                        </button>
                         <div class="card shadow mb-4 mt-4">
                             <div class="card-header py-3">
                                 <h6 class="m-0 font-weight-bold text-primary"></h6>
@@ -116,16 +104,103 @@
 
     </div>
     <!-- End Page Wrapper -->
+    <!-- Add Room Modal -->
+    <div class="modal fade" id="addRoomModal" tabindex="-1" role="dialog" aria-labelledby="addRoomModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addRoomModalLabel">Add New Room</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- Form for adding a room -->
+                    <form id="addRoomForm">
+                        <div class="form-group">
+                            <label for="roomName">Room Name</label>
+                            <input type="text" class="form-control" id="roomName" placeholder="Enter room name">
+                        </div>
+                        <div class="form-group">
+                            <label for="roomCapacity">Capacity</label>
+                            <input type="number" class="form-control" id="roomCapacity" placeholder="Enter capacity">
+                        </div>
+                        <div class="form-group">
+                            <label for="roomDescription">Description</label>
+                            <textarea class="form-control" id="roomDescription" rows="3" placeholder="Enter description"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="roomFacilities">Facilities</label>
+                            <input type="text" class="form-control" id="roomFacilities" placeholder="Enter facilities">
+                        </div>
+                        <div class="form-group">
+                            <label for="roomImage">Upload Image</label>
+                            <input type="file" class="form-control-file" id="roomImage">
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="roomEnabled">
+                            <label class="form-check-label" for="roomEnabled">
+                                Enable Room
+                            </label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="addRoomForm">Save Room</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="/static/vendor/jquery/jquery.min.js"></script>
-    <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="/static/js/sb-admin-2.min.js"></script>
+    <!-- Edit Room Modal -->
+    <div class="modal fade" id="editRoomModal" tabindex="-1" role="dialog" aria-labelledby="editRoomModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editRoomModalLabel">Edit Room</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="editRoomForm">
+                        <div class="form-group">
+                            <label for="roomName">Room Name</label>
+                            <input type="text" class="form-control" id="roomName" placeholder="Enter room name">
+                        </div>
+                        <div class="form-group">
+                            <label for="roomCapacity">Capacity</label>
+                            <input type="number" class="form-control" id="roomCapacity" placeholder="Enter capacity">
+                        </div>
+                        <div class="form-group">
+                            <label for="roomDescription">Description</label>
+                            <textarea class="form-control" id="roomDescription" rows="3" placeholder="Enter description"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="roomFacilities">Facilities</label>
+                            <input type="text" class="form-control" id="roomFacilities" placeholder="Enter facilities">
+                        </div>
+                        <div class="form-group">
+                            <label for="roomImage">Upload Image</label>
+                            <input type="file" class="form-control-file" id="roomImage">
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="roomEnabled">
+                            <label class="form-check-label" for="roomEnabled">
+                                Enable Room
+                            </label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="editRoomForm">Save Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% include 'script-sources.html' %}
 
     <!-- Page level plugins -->
     <script src="/static/vendor/datatables/jquery.dataTables.min.js"></script>
