--- a/templates/sidebar-nav.html
+++ b/templates/sidebar-nav.html
@@ -2,7 +2,7 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-rocket"></i>
         </div>
@@ -14,7 +14,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="/">
             <!-- <i class="fas fa-fw fa-tachometer-alt"></i> -->
             <span>Dashboard</span></a>
     </li>
@@ -37,7 +37,7 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <a class="collapse-item" href="/booking/schedules" id="bookingSchedule">Schedule</a>
-                <a class="collapse-item" href="" id="bookingRooms">Rooms</a>
+                <a class="collapse-item" href="/booking/rooms" id="bookingRooms">Rooms</a>
                 <a class="collapse-item" href="/booking/form" id="bookingForm">Book</a>
                 <a class="collapse-item" href="" id="bookingReports">Reports</a>
             </div>
@@ -98,9 +98,9 @@
 
     <!-- Nav Item - Tables -->
     <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="/admin/rooms">
             <i class="fas fa-fw fa-door-closed"></i>
-            <span>Rooms</span></a>
+        <span>Rooms</span></a>
     </li>
 
     <!-- Divider -->
